WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
292051
LayoutTests/webgl/1.0.x/conformance/uniforms/uniform-location.html fails
https://bugs.webkit.org/show_bug.cgi?id=292051
Summary
LayoutTests/webgl/1.0.x/conformance/uniforms/uniform-location.html fails
Kimmo Kinnunen
Reported
2025-04-25 02:02:21 PDT
Failure to validate webgl uniform
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2025-04-25 02:02:52 PDT
<
rdar://problem/150018247
>
Kimmo Kinnunen
Comment 2
2025-04-25 02:12:19 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/44508
EWS
Comment 3
2025-04-25 07:58:54 PDT
Committed
294107@main
(cfb61f6b86d7): <
https://commits.webkit.org/294107@main
> Reviewed commits have been landed. Closing PR #44508 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug