WebGL CTS test uniform-location.html fails https://bugs.webkit.org/show_bug.cgi?id=292051 rdar://problem/150018247

Reviewed by Mike Wyrzykowski.

Uniforms are invalidated and detached from their programs if the
programs are relinked.

Ensure that validateUniformLocation generates an error if there is no
current program and the uniform comes from a program that was
relinked.

Enable the newer WebGL CTS tests for testing uniform related
implementation.

* LayoutTests/TestExpectations:
* LayoutTests/platform/glib/TestExpectations:
* LayoutTests/platform/gtk/TestExpectations:
* LayoutTests/platform/ios/TestExpectations:
* LayoutTests/platform/mac-site-isolation/TestExpectations:
* LayoutTests/platform/mac/TestExpectations:
* LayoutTests/platform/win/TestExpectations:
* LayoutTests/platform/wpe/TestExpectations:
* Source/WebCore/html/canvas/WebGLRenderingContextBase.cpp:
(WebCore::WebGLRenderingContextBase::validateUniformLocation):

Canonical link: https://commits.webkit.org/294107@main